used mailchimp merge tag on footer

--- a/html/amazon_coral.html
+++ b/html/amazon_coral.html
@@ -623,7 +623,7 @@
                   <tbody>
                     <tr>
                       <td align="center" style="font-size:0px;padding:0px;word-break:break-word;">
-                        <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:12px;line-height:1;text-align:center;color:#232F3F;" mc:edit="footer_text">© 2022 Amazon.com, Inc. or its affiliates. Amazon and all related logos are trad emarks of Amazon.com, Inc. or its affiliates. Amazon.com, 2021 7th Ave. Seattle, WA 98121 <br><br /> We hope you found this message to be useful. However, if you’d rather not receive future emails of this sort from Amazon Advertising, please update your <a>email preferences</a> or <a>unsubscribe</a>.</div>
+                        <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:12px;line-height:1;text-align:center;color:#232F3F;" mc:edit="footer_text">copyright&copy; *|CURRENT_YEAR|* Amazon.com, Inc. or its affiliates. Amazon and all related logos are trad emarks of Amazon.com, Inc. or its affiliates. Amazon.com, 2021 7th Ave. Seattle, WA 98121 <br><br /> We hope you found this message to be useful. However, if you’d rather not receive future emails of this sort from Amazon Advertising, please update your <a>email preferences</a> or <a>unsubscribe</a>.</div>
                       </td>
                     </tr>
                   </tbody>
