--- a/inlined-html/amazon_coral_inlined.html
+++ b/inlined-html/amazon_coral_inlined.html
@@ -655,7 +655,7 @@
                       <tbody>
                         <tr>
                           <td align="center" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;font-size:0px;padding:0px;word-break:break-word;">
-                            <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:12px;line-height:1;text-align:center;color:#232F3F;" mc:edit="footer_text">© 2022 Amazon.com, Inc. or its affiliates. Amazon and all related logos are trad emarks of Amazon.com, Inc. or its affiliates. Amazon.com, 2021 7th Ave. Seattle, WA 98121 <br>
+                            <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:12px;line-height:1;text-align:center;color:#232F3F;" mc:edit="footer_text">copyright&copy; *|CURRENT_YEAR|* Amazon.com, Inc. or its affiliates. Amazon and all related logos are trad emarks of Amazon.com, Inc. or its affiliates. Amazon.com, 2021 7th Ave. Seattle, WA 98121 <br>
                               <br/> We hope you found this message to be useful. However, if you’d rather not receive future emails of this sort from Amazon Advertising, please update your <a style="text-decoration:underline;">email preferences</a> or <a style="text-decoration:underline;">unsubscribe</a>.</div>
                           </td>
                         </tr>
